--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
+- "2.6"
+- "2.7"
+- "3.2"
+- "3.3"
+- "3.4"
+install: sudo ./setup_apache.sh
 script: python setup.py test
