Use Pylint to for checking the code quality.
[Pylint](http://www.pylint.org/) sets a certain standard for code
quality. I use this code analysis tool because it seems to be prevalent
in the Python community.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ python:
 - "3.2"
 - "3.3"
 - "3.4"
-install: sudo ./setup_apache.sh
-script: python setup.py test
+install:
+  - sudo ./setup_apache.sh
+  - pip install setuptools-lint
+script: python setup.py test lint
