--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ python:
 - "3.4"
 install:
   - sudo ./setup_apache.sh
+  - pip install pylint==1.3.1
   - pip install setuptools-lint
 script: python setup.py test lint
