--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 - "3.4"
 install:
   - sudo ./setup_apache.sh
+  - pip install astroid==1.3.2
   - pip install logilab-common==0.62.1
   - pip install pylint==1.3.1
   - pip install setuptools-lint
